Fix more markdown issues.

--- a/FE630 - Homework/FE630 - Homework #1/Sid Bhatia - FE630 ~ Homework #1.html
+++ b/FE630 - Homework/FE630 - Homework #1/Sid Bhatia - FE630 ~ Homework #1.html
@@ -7785,7 +7785,7 @@ Taylor Series Expected Utility Approximation: 6.9243
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p>Given the initial wealth increase to $\$2000$ and applying the previously defined Python code, the risk premium for this new scenario is approximately $\bf{\$13.10}$. This result indicates how sensitive the investor's risk aversion is to changes in initial wealth. With an initial wealth of $2000, the investor perceives the gamble to be less risky compared to when the initial wealth was $1000, hence the lower risk premium.</p>
+<p>Given the initial wealth increase to $\$2000$ and applying the previously defined Python code, the risk premium for this new scenario is approximately $\bf{\$13.10}$. This result indicates how sensitive the investor's risk aversion is to changes in initial wealth. With an initial wealth of $\$2000$, the investor perceives the gamble to be less risky compared to when the initial wealth was $\$1000$, hence the lower risk premium.</p>
 <p>This decrease in the risk premium with an increase in initial wealth can be attributed to the utility function's properties, which in this case is a logarithmic function. The logarithmic utility function exhibits <strong>diminishing marginal utility</strong>, meaning that as wealth increases, the utility gained from an additional dollar becomes less significant. Consequently, the investor's aversion to losing a certain amount of money diminishes as their wealth increases, leading to a lower risk premium for the gamble at higher levels of initial wealth.</p>
 </div>
 </div>
