--- a/FE630 - Homework/FE630 - Homework #1/Sid Bhatia - FE630 ~ Homework #1.html
+++ b/FE630 - Homework/FE630 - Homework #1/Sid Bhatia - FE630 ~ Homework #1.html
@@ -7802,6 +7802,66 @@ Taylor Series Expected Utility Approximation: 6.9243
 </div>
 </div>
 </div>
+</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell">
+<div class="jp-Cell-inputWrapper" tabindex="0">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea">
+<div class="jp-InputPrompt jp-InputArea-prompt">In [ ]:</div>
+<div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
+<div class="cm-editor cm-s-jupyter">
+<div class="highlight hl-ipython3"><pre><span></span><span class="c1"># Re-defining necessary values and functions to calculate the new risk premium.</span>
+
+<span class="c1"># Updated game conditions for sensitivity to volatility.</span>
+<span class="n">W0</span> <span class="o">=</span> <span class="mi">1000</span>  <span class="c1"># Initial wealth is $1000</span>
+<span class="n">W_win</span> <span class="o">=</span> <span class="mi">300</span>  <span class="c1"># Winning amount is now $300</span>
+<span class="n">W_lose</span> <span class="o">=</span> <span class="o">-</span><span class="mi">300</span>  <span class="c1"># Losing amount is also $300, indicating increased volatility</span>
+<span class="n">p_win</span> <span class="o">=</span> <span class="mi">1</span><span class="o">/</span><span class="mi">2</span>  <span class="c1"># Probability of winning is 1/2</span>
+<span class="n">p_lose</span> <span class="o">=</span> <span class="mi">1</span><span class="o">/</span><span class="mi">2</span>  <span class="c1"># Probability of losing is also 1/2</span>
+
+<span class="c1"># Calculate expected utility with the new conditions.</span>
+<span class="n">EU_new</span> <span class="o">=</span> <span class="n">expected_utility</span><span class="p">(</span><span class="n">W0</span><span class="p">,</span> <span class="n">W_win</span><span class="p">,</span> <span class="n">W_lose</span><span class="p">,</span> <span class="n">p_win</span><span class="p">,</span> <span class="n">p_lose</span><span class="p">)</span>
+
+<span class="c1"># Solve for the certainty equivalent with the new conditions.</span>
+<span class="n">CE_new</span> <span class="o">=</span> <span class="n">find_certainty_equivalent</span><span class="p">(</span><span class="n">EU_new</span><span class="p">,</span> <span class="n">W0</span><span class="p">)</span>
+
+<span class="c1"># Calculate expected wealth from the game with the new conditions.</span>
+<span class="n">E_W_new</span> <span class="o">=</span> <span class="n">W0</span> <span class="o">+</span> <span class="n">p_win</span> <span class="o">*</span> <span class="n">W_win</span> <span class="o">+</span> <span class="n">p_lose</span> <span class="o">*</span> <span class="n">W_lose</span>
+
+<span class="c1"># Calculate the risk premium with the new conditions</span>
+<span class="n">RP_new</span> <span class="o">=</span> <span class="n">calculate_risk_premium</span><span class="p">(</span><span class="n">E_W_new</span><span class="p">,</span> <span class="n">W0</span><span class="p">,</span> <span class="n">CE_new</span><span class="p">)</span>
+
+<span class="nb">print</span><span class="p">(</span><span class="sa">f</span><span class="s2">"New Risk Premium: </span><span class="si">{</span><span class="n">RP_new</span><span class="si">:</span><span class="s2">.2f</span><span class="si">}</span><span class="s2">"</span><span class="p">)</span>
+</pre></div>
+</div>
+</div>
+</div>
+</div>
+<div class="jp-Cell-outputWrapper">
+<div class="jp-Collapser jp-OutputCollapser jp-Cell-outputCollapser">
+</div>
+<div class="jp-OutputArea jp-Cell-outputArea">
+<div class="jp-OutputArea-child">
+<div class="jp-OutputPrompt jp-OutputArea-prompt"></div>
+<div class="jp-RenderedText jp-OutputArea-output" data-mime-type="text/plain" tabindex="0">
+<pre>New Risk Premium: 46.06
+</pre>
+</div>
+</div>
+</div>
+</div>
+</div>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
+<div class="jp-Cell-inputWrapper" tabindex="0">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
+<p>With the updated game conditions, the risk premium now is approximately $\bf{\$46.06}$. This indicates a significant increase in the risk premium compared to the previous scenarios.</p>
+<p>This increase reflects the heightened sensitivity of the investor's risk aversion to the increased volatility of the game. With both potential gains and losses being larger and equally probable, the gamble is perceived as <strong>riskier</strong>, leading to a <strong>higher risk premium</strong>. The investor would require a larger compensation (in terms of a risk premium) to be willing to participate in this more volatile game.</p>
+</div>
+</div>
+</div>
 </div>
 </main>
 </body>
