Convert Problem 3 prompt to HTML.

--- a/FE630 - Homework/FE630 - Homework #1/Sid Bhatia - FE630 ~ Homework #1.html
+++ b/FE630 - Homework/FE630 - Homework #1/Sid Bhatia - FE630 ~ Homework #1.html
@@ -8210,6 +8210,29 @@ Taylor Series Expected Utility Approximation for k = 2: 1067777.78
 </div>
 </div>
 </div>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
+<div class="jp-Cell-inputWrapper" tabindex="0">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
+<h5 id="3.-Exponential-Utility-(20-pts)">3. Exponential Utility (20 pts)<a class="anchor-link" href="#3.-Exponential-Utility-(20-pts)">¶</a></h5>
+</div>
+</div>
+</div>
+</div>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
+<div class="jp-Cell-inputWrapper" tabindex="0">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
+<p>Consider an investment universe with $n$ securities, $S_1, S_2, \dots, S_n$. Given a fixed investment horizon, we denote by $r = (r_1, r_2, \dots, r_n)^T$, the vector of random returns of the securities, and by $\mu = E(r)$ and $\Sigma = cov(r)$ (the Expected Return and Variance-covariance matrix
+respectively). We assume that an investor has a fully invested Portfolio defined by a vector of weights or holdings $\omega = (\omega_1, \omega_2, \dots, \omega_n)^T$ with random return $r_p(\omega)$.</p>
+</div>
+</div>
+</div>
+</div>
 </main>
 </body>
 </html>
