Export 3a to HTML.

--- a/FE630 - Homework/FE630 - Homework #1/Sid Bhatia - FE630 ~ Homework #1.html
+++ b/FE630 - Homework/FE630 - Homework #1/Sid Bhatia - FE630 ~ Homework #1.html
@@ -7529,7 +7529,7 @@ a.anchor-link {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p>a. <strong>Certainty Equivalent and Risk Premium</strong></p>
+<p>a. <strong>Certainty Equivalent and Risk Premium</strong> (5 pts)</p>
 <p>An investor whose initial wealth is $\$1000$ is offered an opportunity to play a fair game with 2 possible outcomes: winning $\$350$ with a probability of $1/3$ or losing $\$150$ with a probability of $2/3$. The investor utility function is the natural logarithm of his wealth, $u(W) = \ln(W)$.</p>
 <ul>
 <li>What is the Certainty Equivalent of this risky game?</li>
@@ -7732,7 +7732,7 @@ Taylor Series Expected Utility Approximation: 6.9243
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p>b. <strong>Sensitivity to Initial Wealth</strong></p>
+<p>b. <strong>Sensitivity to Initial Wealth</strong> (5 pts)</p>
 <p>Assume that the initial wealth is $\$2000$. What is the risk premium now?</p>
 </div>
 </div>
@@ -7797,7 +7797,7 @@ Taylor Series Expected Utility Approximation: 6.9243
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p>c. <strong>Sensitivity to Volatility</strong></p>
+<p>c. <strong>Sensitivity to Volatility</strong> (5 pts)</p>
 <p>Assume that the initial wealth is $\$1000$ and the outcomes are winning $\$300$ with a probability of $1/2$ or losing $\$300$ with a probability of $1/2$. What is the risk premium now?</p>
 </div>
 </div>
@@ -7891,7 +7891,7 @@ Taylor Series Expected Utility Approximation: 6.9243
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p>a. <strong>Absolute Risk Aversion &amp; Risk Attitude</strong></p>
+<p>a. <strong>Absolute Risk Aversion &amp; Risk Attitude</strong> (10 pts)</p>
 <p>Compute the absolute risk aversion coefficient and describe the risk attitude of the investor (Risk-averse or Risk-taker) as a function of $k$. Justify your answer.</p>
 </div>
 </div>
@@ -8010,7 +8010,7 @@ For k = 1.5, the Absolute Risk Aversion (ARA) coefficient is -0.0005, indicating
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p>b. $\boldsymbol{k = 1/2}$</p>
+<p>b. $\boldsymbol{k = 1/2}$ (10 pts)</p>
 <p>Assume that $k = 1/2$. What is the Certainty equivalent of this risky game? What is the exact risk premium of this risky game? How good is the approximation obtained by using a Taylor series expansion and absolute Risk-aversion coefficient?</p>
 </div>
 </div>
@@ -8138,7 +8138,7 @@ Taylor Series Expected Utility Approximation: 32.1454
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p>c. $\boldsymbol{k = 2}$</p>
+<p>c. $\boldsymbol{k = 2}$ (10 pts)</p>
 <p>Assume that $k = 2$. What is the Certainty equivalent of this risky game? What is the exact risk premium of this risky game? How good is the approximation obtained by using a Taylor series expansion and absolute Risk-aversion coefficient?</p>
 </div>
 </div>
@@ -8227,8 +8227,60 @@ Taylor Series Expected Utility Approximation for k = 2: 1067777.78
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p>Consider an investment universe with $n$ securities, $S_1, S_2, \dots, S_n$. Given a fixed investment horizon, we denote by $r = (r_1, r_2, \dots, r_n)^T$, the vector of random returns of the securities, and by $\mu = E(r)$ and $\Sigma = cov(r)$ (the Expected Return and Variance-covariance matrix
-respectively). We assume that an investor has a fully invested Portfolio defined by a vector of weights or holdings $\omega = (\omega_1, \omega_2, \dots, \omega_n)^T$ with random return $r_p(\omega)$.</p>
+<p>Consider an investment universe with $n$ securities, $S_1, S_2, \dots, S_n$. Given a fixed investment horizon, we denote by $r = (r_1, r_2, \dots, r_n)^T$, the vector of random returns of the securities, and by $\mu = E(r)$ and $\Sigma = cov(r)$ (the Expected Return and Variance-covariance matrix respectively). We assume that an investor has a fully invested Portfolio defined by a vector of weights or holdings $\omega = (\omega_1, \omega_2, \dots, \omega_n)^T$ with random return $r_p(\omega)$.</p>
+</div>
+</div>
+</div>
+</div>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
+<div class="jp-Cell-inputWrapper" tabindex="0">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
+<p>a. <strong>Risk Aversion</strong> (10 pts)</p>
+<p>Prove that an investor with utility function $U(r_p) = -e^{-\lambda r_p}$ for $\lambda &gt; 0$ is risk-averse.</p>
+</div>
+</div>
+</div>
+</div>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
+<div class="jp-Cell-inputWrapper" tabindex="0">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
+<p>To prove that an investor with the utility function $U(r_p) = -e^{-\lambda r_p}$ for $\lambda &gt; 0$ is risk-averse, we need to examine the <strong>concavity</strong> of the utility function. A utility function is considered to demonstrate risk aversion if it is <strong>concave</strong>, which can be formally shown by its second derivative being negative across its domain.</p>
+<p>Given the utility function:</p>
+<p>$$U(r_p) = -e^{-\lambda r_p}$$</p>
+<p>Let's find the first and second derivatives of $U(r_p)$ with respect to $r_p$:</p>
+<ol>
+<li><p><strong>First derivative</strong> $U'(r_p)$:
+$$U'(r_p) = \frac{d}{dr_p}(-e^{-\lambda r_p}) = \lambda e^{-\lambda r_p}$$</p>
+</li>
+<li><p><strong>Second derivative</strong> $U''(r_p)$:
+$$U''(r_p) = \frac{d^2}{d(r_p)^2}(-e^{-\lambda r_p}) = -\lambda^2 e^{-\lambda r_p}$$</p>
+</li>
+</ol>
+<p>To determine if the investor is risk-averse, we examine the sign of $U''(r_p)$:</p>
+<p>$$U''(r_p) = -\lambda^2 e^{-\lambda r_p}$$</p>
+<p>Since $\lambda &gt; 0$ and $e^{-\lambda r_p}$ is always positive for all $r_p$ (as the exponential function is always positive), it follows that $U''(r_p)$ is <strong>always negative</strong> ($U''(r_p) &lt; 0$) for any value of $r_p$. This <strong>negative second derivative</strong> indicates that the utility function $U(r_p)$ is <strong>concave</strong>, which is a hallmark of <strong>risk aversion</strong>.</p>
+<p>Therefore, the investor with the utility function $U(r_p) = -e^{-\lambda r_p}$ for $\lambda &gt; 0$ is indeed <strong>risk-averse</strong>, as demonstrated by the concavity of the utility function over its domain.</p>
+</div>
+</div>
+</div>
+</div>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
+<div class="jp-Cell-inputWrapper" tabindex="0">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
+<p>b. <strong>Equivalent Quadratic Problem</strong> (10 pts)</p>
+<ul>
+<li>Provide the expressions of $\mu_p(\omega)$, the Expected return of the portfolio as a function of $\mu$. Provide the expression of $\sigma_p(\omega)^2$, the variance of the portfolio as a function of $\Sigma$. (5 pts)</li>
+<li>Now we assume that the distribution of $r$, random return of the securities, is Gaussian. Prove that maximizing the expected utility $E[U(r_P(\omega))]$ is equivalent to a linear quadratic minimization of an objective function depending solely on $\mu, \Sigma$, and $\omega$. (5 pts)</li>
+</ul>
 </div>
 </div>
 </div>
